- search now displays thumbnail images for documents - added correct no-photo image to slingshot and avatar thumbnail service - fix for wrong rendering of the "add invite by email" box on IE
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@10136 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/invite/addemail.css
+++ b/root/projects/slingshot/source/web/components/invite/addemail.css
@@ -1,54 +1,32 @@
+.inviteusersbyemail  {
+ margin-top: 15px;
+ background-color: #f6f9fc;
+ border: 1px dashed #bababa;
+}
+
 .inviteusersbyemail * {
-	color: #000;
-}
-.inviteusersbyemail .body .user {
-	height: 95px;
-	padding-left: 105px;     
-	padding-right: 83px;     
-}
-
-.inviteusersbyemail .body div.labels,
-.inviteusersbyemail .body div.badd,
-.inviteusersbyemail .body div.inputs {
-	position: relative;
-	float: left;
-}
-
-.inviteusersbyemail .body .inputs {
-	width: 100%;
-}
-
-.inviteusersbyemail .body .labels {
-	width: 100px;           
-	right: 100px;            
-	margin-left: -200px;
-	left: 100px;
-}
-
-.inviteusersbyemail .body .badd {
-	width: 90px;            
-	margin-right: -100%;
-}
-
-.inviteusersbyemail .body .labels span,
-.inviteusersbyemail .body .inputs span {
-	display: block;
-	line-height: 20px;
-	padding: 2px;
+ color: #000;
 }
 
 .inviteusersbyemail .title {
-	color: #009300;
-	font-weight: bold;
-	padding-top: 12px;
-	padding-left: 34px;
-	padding-bottom: 12px;
-	background: transparent url(images/step-two.png) no-repeat 3px center;
+ color: #009300;
+ font-weight: bold;
+ padding-top: 12px;
+ padding-left: 34px;
+ padding-bottom: 12px;
+ background: transparent url(images/step-two.png) no-repeat 3px center;
 }
 
-.inviteusersbyemail  {
-	margin-top: 15px;
-	background-color: #f6f9fc;
-	border: 1px dashed #bababa;
+.inviteusersbyemail .byemailbody .byemailuser {
+ width: 100%;
+ padding: 4px;
 }
 
+.inviteusersbyemail .byemailbody .byemailuser td {
+ white-space:nowrap;
+ padding: 4px;
+}
+
+.inviteusersbyemail .byemailbody .byemailuser .elabel {padding-left: 15px;}
+.inviteusersbyemail .byemailbody .byemailuser .einput {width: 99%;}
+.inviteusersbyemail .byemailbody .byemailuser .byemailadd {vertical-align: top; padding-right: 25px; }
